--- a/roles/demo/inventory.ini
+++ b/roles/demo/inventory.ini
@@ -1,2 +1,33 @@
-[local]
-localhost
+# Hostes / web -
+
+[mongodb]
+mongodb-dev.akviklabs.online
+
+[catalogue]
+catalogue-dev.akviklabs.online
+
+[redis]
+redis-dev.akviklabs.online
+
+[user]
+user-dev.akviklabs.online
+
+[cart]
+cart-dev.akviklabs.online
+
+[mysql]
+mysql-dev.akviklabs.online
+
+[shipping]
+shipping-dev.akviklabs.online
+
+[rabbitmq]
+rabbitmq-dev.akviklabs.online
+
+[payment]
+payment-dev.akviklabs.online
+
+[frontend]
+frontend-dev.akviklabs.online
+
+
