--- a/roles/demo/tasks/roboshop.yaml
+++ b/roles/demo/tasks/roboshop.yaml
@@ -1,4 +1,5 @@
-- name: configure server
-  hosts:
-  become: 
+- name: "configure {{ component}} server"
+  hosts: "{{ component}}"
+  become: yes
   roles:
+  - "{{ component}}"
