--- a/group_vars/all.yaml
+++ b/group_vars/all.yaml
@@ -1,11 +1,11 @@
 ansible_user: ec2-user
 ansible_password: DevOps321
-MONGODB_HOST: mongodb-dev.daws88s.online
-CATALOGUE_HOST: catalogue-dev.daws88s.online
-REDIS_HOST: redis-dev.daws88s.online
-USER_HOST: user-dev.daws88s.online
-CART_HOST: cart-dev.daws88s.online
-MYSQL_HOST: mysql-dev.daws88s.online
-SHIPPING_HOST: shipping-dev.daws88s.online
-RABBITMQ_HOST: rabbitmq-dev.daws88s.online
-PAYMENT_HOST: payment-dev.daws88s.online
+MONGODB_HOST: mongodb-dev.akviklabs.online
+CATALOGUE_HOST: catalogue-dev.akviklabs.online
+REDIS_HOST: redis-dev.akviklabs.online
+USER_HOST: user-dev.akviklabs.online
+CART_HOST: cart-dev.akviklabs.online
+MYSQL_HOST: mysql-dev.akviklabs.online
+SHIPPING_HOST: shipping-dev.akviklabs.online
+RABBITMQ_HOST: rabbitmq-dev.akviklabs.online
+PAYMENT_HOST: payment-dev.akviklabs.online
